--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   html {
     scroll-behavior: smooth;
   }
+
   body {
-    @apply antialiased text-gray-900 bg-[#F7F4F2];
+    @apply antialiased text-gray-900 bg-brand-white;
   }
 }
